--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
           });
           // Step 6: Execute the API request
           request.then(function(resp) {
+              console.log('Executing');
             var heading = document.createElement('h4');
             var image = document.createElement('img');
             image.src = resp.result.image.url;
