--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
 <!--Add a button for the user to click to initiate auth sequence -->
     <button id="authorize-button" style="visibility: hidden">Authorize</button>
+    <div id="content"></div>
     <script type="text/javascript">
 
       var clientId = '270879350971-7k5qv54a09ip2k6cfsd5fpaksecuk4rl.apps.googleusercontent.com';
