--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <ul id="threads" class="list-group"></ul>
             </div>
             <div class="col-xs-6">
-                <div class="panel panel-primary" id="chat">
+                <div class="panel panel-primary hidden" id="chat">
                     <div class="panel-heading" id="accordion">
                         <span class="glyphicon glyphicon-comment"></span> Chat
                     </div>
