populate chat from messages

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <div class="chat-body clearfix">
                                     <div class="header">
                                         <strong class="primary-font">Jack Sparrow</strong> <small class="pull-right text-muted">
-                                            <span class="glyphicon glyphicon-time"></span>12 mins ago</small>
+                                            <span class="glyphicon glyphicon-time"></span><span class="time">12 mins ago</span></small>
                                     </div>
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
@@ -90,7 +90,7 @@
                                 </span>
                                 <div class="chat-body clearfix">
                                     <div class="header">
-                                        <small class=" text-muted"><span class="glyphicon glyphicon-time"></span>13 mins ago</small>
+                                        <small class=" text-muted"><span class="glyphicon glyphicon-time"></span><span class="time">13 mins ago</span></small>
                                         <strong class="pull-right primary-font">Bhaumik Patel</strong>
                                     </div>
                                     <p>
